--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!Doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+       <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> 
+       <html class="no-js lt-ie9 lt-ie8" lang=""> 
+       <html class="no-js lt-ie9" lang=""> 
+       <html class="no-js" lang="ES">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Cooking School Free html template</title>
+        <title>M</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -14,14 +14,14 @@
 
         <link rel="stylesheet" href="assets/css/skills/progressbar.css">
         <link rel="stylesheet" href="assets/css/skills/style.css">
-        <!--<link rel="stylesheet" href="assets/css/navmenu/styles.css">-->
+        <link rel="stylesheet" href="assets/css/navmenu/styles.css">
         <link rel="stylesheet" href="assets/css/portfolio.jquery.css">
         <link rel="stylesheet" href="assets/css/fonticons.css">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/fonts/stylesheet.css">
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <!--        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">-->
+        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
 
 
         <!--For Plugins external css-->
